2001-08-03  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-toggle-inline-images): Display "Showing images..."
	message only when there is at least one inline image.
	(w3m-current-post-data): New buffer local variable.
	(w3m-current-referer): Ditto.
	(w3m-goto-url): Set up `w3m-current-post-data' and
	`w3m-current-referer'.
	(w3m-reload-this-page): Process post-data and referer.

2001-08-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-download-save-directory): New user option.
	(w3m-goto-ftp-url, w3m-download): Refer it.

2001-08-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-antenna.el (w3m-antenna-shutdown): Don't specify a
	coding-system to `w3m-save-list'.
	(w3m-antenna-setup): Don't specify a coding-system to
	`w3m-load-list'.
	(w3m-antenna-file-coding-system): Abolished.

	* w3m.el (w3m-arrived-shutdown): Don't specify a coding-system to
	`w3m-save-list'.
	(w3m-arrived-shutdown, w3m-arrived-setup): Don't specify a
	coding-system to `w3m-load-list'.
	(w3m-save-list): Made the arg `coding-system' optional; refer to
	`w3m-file-coding-system' by default; insert the file magic in the
	beginning of a file.
	(w3m-load-list): Made the arg `coding-system' optional; refer to
	`w3m-file-coding-system-for-read' by default.
	(w3m-arrived-file-coding-system): Abolished.
	(w3m-file-coding-system-for-read): New variable.
	(w3m-file-coding-system): New user option.

2001-08-02  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-arrived-user-alist): Rename from
	w3m-arrived-user-list.
	(w3m-process-realm): New variable.
	(w3m-exec-process): Bind w3m-process-realm to nil.
	Call w3m-exec-set-user() for the certification.
	(w3m-exec-get-user): Rewrite.
	(w3m-exec-set-user): New function.
	(w3m-get-server-root): Ditto.
	(w3m-exec-filter): Support a pair of 'rootserver' and 'realm'.

2001-08-02  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-form.el (w3m-form-make-form-data): Fixed typo.
	(w3m-form-input-file): Rewrite.