@@ -1,3 +1,9 @@
+2001-08-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* w3m-namazu.el (w3m-namazu-default-index): Changed customize
+	spec.
+	(w3m-namazu): Follow change of `w3m-namazu-default-index'.
+
 2001-08-03  Yuuichi Teranishi  <teranisi@gohome.org>
 
 	* w3m.el (w3m-toggle-inline-images): Display "Showing images..."
